--- a/BankBranch/src/main/resources/templates/greeting.html
+++ b/BankBranch/src/main/resources/templates/greeting.html
@@ -2,24 +2,38 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Getting Started: Serving Web Content</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Подключение Leaflet.js -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
     <!-- Подключение плагина для работы с маршрутами -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-routing-machine/dist/leaflet-routing-machine.css" />
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/leaflet-routing-machine/dist/leaflet-routing-machine.css"/>
     <script src="https://cdn.jsdelivr.net/npm/leaflet-routing-machine/dist/leaflet-routing-machine.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+          crossorigin="anonymous">
 
 </head>
 <body>
-<p th:text="'Hello, ' + ${name} + '!'" />
 
 
-<div id="map" style="width: 1024px; height: 768px;"></div>
+<div class="container p-4">
 
-<script type="text/javascript">
+    <p th:text="'Hello, ' + ${name} + '!'"/>
+
+
+    <div th:replace="~{fragments/findPlace :: findPlace}">findPlace</div>
+
+
+    <div id="map" style="width: 1024px; height: 768px;"></div>
+
+    <script type="text/javascript">
     var map = L.map('map').setView([55.781863, 49.124884], 13);
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
@@ -36,7 +50,14 @@
         ],
         routeWhileDragging: true
     }).addTo(map);
+
 </script>
+
+</div>
+
+
+
+
 
 
 </body>
