--- a/BankBranch/src/main/resources/templates/greeting.html
+++ b/BankBranch/src/main/resources/templates/greeting.html
@@ -30,6 +30,8 @@
 
     <div th:replace="~{fragments/findPlace :: findPlace}">findPlace</div>
 
+    <div th:replace="~{fragments/createPath :: createPath}">createPath</div>
+
 
     <div id="map" style="width: 1024px; height: 768px;"></div>
 
