--- a/BankBranch/src/main/resources/templates/fragments/createPath.html
+++ b/BankBranch/src/main/resources/templates/fragments/createPath.html
@@ -5,7 +5,7 @@
 <body>
 <div th:fragment="createPath">
 
-    <form method="post" th:action="@{/createPath}"
+    <form method="post" th:action="@{/buildRoute}"
           enctype="multipart/form-data">
 
         <div class="input-group mb-3">
