--- a/BankBranch/src/main/resources/templates/fragments/findPlace.html
+++ b/BankBranch/src/main/resources/templates/fragments/findPlace.html
@@ -12,7 +12,7 @@
             <span class="input-group-text w-25">Find place</span>
             <input class="form-control"
                       type="text"
-                      name="find"
+                      name="findPlace"
                       placeholder="Найти"
                       th:classappend="${message != null and #fields.hasErrors('message.text')} ? 'is-invalid' : ''"
             ></input>
