--- a/BankBranch/src/main/resources/templates/greeting.html
+++ b/BankBranch/src/main/resources/templates/greeting.html
@@ -27,6 +27,9 @@
 <body style="background-color: #ffffff; color: #2f3441;">
 
 
+
+<p th:text="${endLat}"/>
+<p th:text="${endLon}"/>
 <!-- <div class="container p-4">
 
     <p th:text="'Hello, ' + ${name} + '!'"/>
