--- a/BankBranch/src/main/resources/templates/greeting.html
+++ b/BankBranch/src/main/resources/templates/greeting.html
@@ -60,6 +60,8 @@
         <option id="empty" value="empty">Выберите услугу</option>
         <option id="credit" value="credit">кредит</option>
         <option id="ATM" value="ATM">банкомат</option>
+        <option id="leasing" value="ATM">лизинг</option>
+        <option id="eq" value="ATM">эквайринг</option>
     </select>
     <button id="walking" class="button" style="width: 40px; margin-left: 10px">
         <img id="vehicle" class="vehicle" src="icon-walk.png" placeholder="https://www.flaticon.com/ru/free-icons/- Аллея славы иконки от icon_small - Flaticon"
