--- a/BankBranch/src/main/resources/templates/greeting.html
+++ b/BankBranch/src/main/resources/templates/greeting.html
@@ -28,8 +28,8 @@
 
 
 
-<p id="endlat" th:text="${endLat}"/>
-<p id="endlon" th:text="${endLon}"/>
+<p id="endlat" value="123" th:attr="value=${endLat}"/>
+<p id="endlon" value="123" th:attr="value=${endLon}"/>
 <!-- <div class="container p-4">
 
     <p th:text="'Hello, ' + ${name} + '!'"/>
@@ -204,8 +204,9 @@
     let rec = document.getElementById('recommended')
     let userType = document.getElementById('user_type')
     let service = document.getElementById('service')
-
-    rec.addEventListener('click', ()=> {
+    let latitude =  document.getElementById('endlat')
+    let longitude =  document.getElementById('endlon')
+    response = ()=> {
         let data = JSON.stringify({
             "latlng": point1.getLatLng(),
             "service": service.value,
@@ -213,12 +214,11 @@
             "vehicle": hasVehicle ? "Yes" : "NO"
         });
         console.log(data)
-        xhr.open("GET", "http://localhost:8080?data=" + encodeURIComponent(data))
+        xhr.open("POST", "http://localhost:8080?data=" + encodeURIComponent(data))
         xhr.onreadystatechange = function() {
             if (xhr.readyState == XMLHttpRequest.DONE) {
-                console.log(xhr.responseText)
-                var mapElement = document.getElementById('map');
-                L.marker([ parseFloat([[${endLat}]]), parseFloat([[${endLon}]])]).addTo(map)
+                console.log(latitude, longitude)
+                L.marker([ latitude, longitude]).addTo(map)
             }
         }
         xhr.setRequestHeader("Content-Type", "application/json");
@@ -226,7 +226,10 @@
         // L.marker([document.getElementById('endlat').getAttribute('th:text'),
         //     document.getElementById('endlon').getAttribute('th:text')], {icon: iconBank}).addTo(map)
         xhr.send(data);
-    })
+    }
+    rec.addEventListener("onload", response)
+
+    rec.addEventListener('click', response)
 
 </script>
 </div>
